--- a/i8y-ui-bundle/src/css/home.css
+++ b/i8y-ui-bundle/src/css/home.css
@@ -13,7 +13,7 @@
 }
 
 .banner {
-  background: url(../img/banner.png);
+  background: url(../img/banner.jpg);
   background-size: cover;
   width: 100%;
 }
@@ -36,7 +36,7 @@
 }
 
 .action {
-  background: url(../img/action.png);
+  background: url(../img/action.jpg);
   background-size: cover;
   width: 100%;
   padding: 3em;
