--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -5,7 +5,7 @@
         <div class="banner {{ if .IsHome }}banner-home{{ end}}" {{ with $featured_image }}
             style="background-image: url('{{ $featured_image }}');" {{ end }}>
 
-            <h1>{{ .Title | default .Site.Title | safeHTML }}</h1>
+            <h1>{{ .Title | markdownify | default .Site.Title }}</h1>
         </div>
     </div>
     {{ if .IsHome }}
